--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,11 +1,15 @@
 $off-black: #20222b;
-$off-white: #a5afd7;
-$off-blue: #333745;
-$blue: #3c4251;
+$off-white: #f7f7f7;
+$off-blue: #364051;
+$blue: #1c88bf;
 $light-blue: #464b5e;
 $off-purple: #8357c5;
+$dark-grey: #333;
+$grey: #666;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 40rem;
+$font-l: 1.8rem;
+$font-s: 1.4rem;
