Included react modal for remove and improve log in styles

--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -19,3 +19,8 @@
     background: #888;
     margin-left: 1.5rem;
 }
+
+.button--modal{
+    margin: 2rem;
+    border: 0.2rem solid darken($color: $blue, $amount: 10);
+}
